--- a/Index.html
+++ b/Index.html
@@ -28,40 +28,33 @@
           <nav>
             <ul>
               <li>
-                <a href=""><li class="sm-item">PS5</li></a>
+                <a href="Index.html"><li class="sm-item">Inicio</li></a>
               </li>
               <li>
-                <a href=""><li class="sm-item">Xbox One</li></a>
+                <a href="user-login.html"><li class="sm-item">Registro</li></a>
               </li>
               <li>
-                <a href=""><li class="sm-item">Switch</li></a>
+                <a href="user-add.html"><li class="sm-item">Ingreso</li></a>
               </li>
               <li>
-                <a href=""><li class="sm-item">Anime</li></a>
+                <a href="perfil.html"><li class="sm-item">Perfil</li></a>
               </li>
               <li>
-                <a href=""><li class="sm-item">Netflix</li></a>
+                <a href="proyecto.html"><li class="sm-item">Acerca del Proyecto</li></a>
               </li>
               <li>
-                <a href=""><li class="sm-item">Ver mas</li></a>
+                <a href="contacto.html"><li class="sm-item">Contacto</li></a>
               </li>
+
               <li>
                 <a href=""
                   ><li class="sm-item"><i class="fas fa-search"></i></li
                 ></a>
               </li>
-              <li>
-                <a href=""><li class="sm-item btn">Ingresar</li></a>
-              </li>
             </ul>
           </nav>
         </section>
-        <section class="subMenu">
-          <a href="" class="sm-item-2">Trailers </a>
-          <a href="" class="sm-item-2">Novedades</a>
-          <a href="" class="sm-item-2">Esports</a>
-          <a href="" class="sm-item-2">Destacados</a>
-        </section>
+        
       </div>
     </header>
     <div class="Wrap-Menu">
@@ -105,7 +98,8 @@
               <h3>Novedades</h3>
               <i class="fas fa-clipboard-list color-white"></i>
             </div>
-            <div class="wrap-news"><!-- INICIO NEWS-->
+            <div class="wrap-news">
+              <!-- INICIO NEWS-->
               <div class="new">
                 <img src="image.css/xbox series.jpg" width="300" alt="" />
                 <section class="">
@@ -143,61 +137,41 @@
                 </section>
               </div>
               <div class="new">
-                <img src="image.css/donkey-kong-super-nintendo-world.webp" alt="">
+                <img
+                  src="image.css/donkey-kong-super-nintendo-world.webp"
+                  alt=""
+                />
                 <section class="">
-                  <p> Donkey Kong llegará al Super Nintendo World</p>
+                  <p>Donkey Kong llegará al Super Nintendo World</p>
                 </section>
               </div>
               <div class="new">
-                <img src="image.css/monster hunter rise.png" alt="">
+                <img src="image.css/monster hunter rise.png" alt="" />
                 <section class="">
                   <p>Monster hunter rise: sunbreak</p>
                 </section>
               </div>
               <div class="new">
-                <img src="image.css/atelier-ryza-2-lost-legends-and-the-secret-fairy-switch-hero.jpg" alt="">
+                <img
+                  src="image.css/atelier-ryza-2-lost-legends-and-the-secret-fairy-switch-hero.jpg"
+                  alt=""
+                />
                 <section class="">
                   <p>Atelier Ryza 2:lost legends and the secret fairy</p>
                 </section>
               </div>
               <div class="new">
-                <img src="image.css/atelier-ryza-2-lost-legends-and-the-secret-fairy-switch-hero.jpg" alt="">
+                <img
+                  src="image.css/atelier-ryza-2-lost-legends-and-the-secret-fairy-switch-hero.jpg"
+                  alt=""
+                />
                 <section class="">
                   <p>Atelier Ryza 2:lost legends and the secret fairy</p>
                 </section>
               </div>
-            </div><!--FIN NEWS-->
+            </div>
+            <!--FIN NEWS-->
           </section>
-        </section>
-        <section class="video">
-          <div class="titulosH3">
-            <h2>Formulario</h2>
-            <i class="fas fa-clipboard-list color-white"></i>
-          </div>
-          <!--Formulario Inicio-->
-          <div class="container">
-            <div class="login-wrapper">
-              <form class="login-form">
-                <!-- username --> 
-                <div class="username">
-                  <label><span class="entypo-user"></span></label>
-                  <input type="text" placeholder="Usuario"/>
-                </div>
-                <!-- password -->
-                <div class="password">
-                  <label><span class="entypo-lock"></span></label>
-                  <input type="password" placeholder="Constraseña"/>
-                </div>
-                <!-- button -->
-                <button class="btn">Ingresa</button>
-                <p>
-                  No es un miembro? <a href="#" class="link">Registrate <span class="entypo-right-thin"></span></a>
-                </p>
-              </form>
-            </div> <!-- /login-wrapper -->
-          </div>  <!-- /container -->   
-          <!--Formulario Inicio-->
-
         </section>
       </section>
     </div>
